--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -5,7 +5,14 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background: #00d2ff;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #928DAB, #00d2ff);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #928DAB, #00d2ff);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
     margin: 0;
     display: flex;
     justify-content: center;
@@ -17,10 +24,43 @@ body {
     min-height: 11in;
     padding: 1in;
     margin: 1rem;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .5);
     background-color: white;
+
 }
 
 .container .ql-container,
 .container .ql-toolbar {
     border-style: none;
+
+}
+
+.container .ql-toolbar {
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    background-color: white;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .5);
+    margin-bottom: 20px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+}
+
+.ql-container .ql-editor {
+    height: 500px;
+    overflow: auto;
+}
+
+@media (max-width: 600px) {
+    body {
+        width: 100%;
+    }
 }
